# wayvoice

./: CLAUDE.md  Cargo.toml  Justfile  LICENSE  README.md  flake.nix
src/: config.rs  daemon.rs  inject.rs  ipc.rs  main.rs  oneshot.rs  text.rs  transcription.rs
