[package]
name = "wayvoice"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
reqwest = { version = "0.12", features = ["multipart", "rustls-tls", "json"], default-features = false }
tokio = { version = "1", features = ["rt", "process", "io-util", "fs", "sync", "net", "signal", "macros"] }
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = "z"
lto = true
strip = true
